FIxed scroll on mobile issue

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
+html {
+  height: 100%;
+}
 body {
   margin: 0;
 
-  min-height: 100vh;
   width: calc(100vw);
+  height: 100%;
 
   /* background: linear-gradient(#ffdfca, #433c3c);
   b */
@@ -10,6 +13,7 @@ body {
   background-image: linear-gradient(#ffffff00, #141a1c), url('assets/backgrounds/06_RaysBG.jpg');
   background-size: cover;
   background-position: bottom;
+  background-attachment: fixed;
 
   display: flex;
   flex-direction: column;
